# webpack-test

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: lib.rs
